@@ -3,6 +3,8 @@ Changes since Elementary 1.8.0:
 
 Additions:
 
+   * Add elm_object_tooltip_orient_set() and elm_object_tooltip_orient_get().
+
 Improvements:
 
 Fixes:
